# cmake-ntp

./: CMakeLists.txt  README.md  toolchain.cmake
ntp/: CMakeLists.txt
openssl/: CMakeLists.txt
